# DiscordPointTracker

./: .dockerignore  .env.example  .gitignore  .replit  24_7_DEPLOYMENT_GUIDE.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_TROUBLESHOOTING.md  Dockerfile  EMAIL_SUBMISSION_GUIDE.md  FLY_DEPLOYMENT_GUIDE.md  GITHUB_REUPLOAD_GUIDE.md  GITHUB_TROUBLESHOOTING.md  GITHUB_UPLOAD_GUIDE.md  NO_EMAIL_SOLUTION.md  ORDER_PROCESSING_GUIDE.md  README.md  REPLIT_DEPLOYMENT_TROUBLESHOOTING.md  SENDGRID_SETUP.md  SENDGRID_TROUBLESHOOTING.md  UPLOAD_CHECKLIST.md  UPTIME_PROOF.md  app.py  bot.py  bot_backup.py  bulk_update_roles.py  config.py  core_files_only.md  customer_orders.csv  database.py  database_postgresql.py  deploy_requirements.txt  discord_commands_20250722_082148.txt  discord_commands_20250722_083802.txt  email_export_test.csv  enhanced_achievements.py  example_orders.csv  fix_missing_roles.py  fly.toml  full_order_database.csv  github_upload_instructions.md  (+20 more)
attached_assets/: Pasted-Why-Your-Bot-Still-Goes-Offline-Even-with-UptimeRobot-Ping-You-re-using-UptimeRobot-to-ping-https-1753253439912_1753253439913.txt  emailsubmissiondatabackup_1753347880581.csv  points_1753348417566.csv
